--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
   "homepage": "https://github.com/AmpCoding/ampFitness#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
+    "express-session": "^1.17.3",
     "pg": "^8.8.0",
     "sequelize": "^6.28.0",
     "stripe": "^11.8.0"
